--- a/src/lib/editor/styles.css
+++ b/src/lib/editor/styles.css
@@ -1,5 +1,5 @@
 .ProseMirror {
-    font-size: 4rem;
+    font-size: var(--font-size-base);
     caret-color: transparent;
     /* Hide the default blinking cursor */
 }
@@ -20,6 +20,12 @@
 :root {
     --cursor-transition-duration: 0.05s;
     --cursor-transition-timing-function: cubic-bezier(0.22, 0.08, 0.22, 1);
+    /* Increase when recording demos */
+    --font-scale: 4;
+
+    --font-size-xs: calc(9px * var(--font-scale));
+    --font-size-sm: calc(11px * var(--font-scale));
+    --font-size-base: calc(15px * var(--font-scale));
 }
 
 .sr-only {
