--- a/src/lib/styles.css
+++ b/src/lib/styles.css
@@ -29,6 +29,7 @@
     --font-size-base: calc(15px * var(--font-scale));
     --font-family: 'Satoshi-Variable', sans-serif;
 
+    --accent-color: #22b561;
     --font-color-primary: #353535;
 }
 
