--- a/src/lib/styles.css
+++ b/src/lib/styles.css
@@ -26,7 +26,10 @@
 
     --font-size-xs: calc(9px * var(--font-scale));
     --font-size-sm: calc(11px * var(--font-scale));
-    --font-size-base: calc(15px * var(--font-scale));
+    --font-size-base: calc(16px * var(--font-scale));
+    --font-size-lg: calc(20px * var(--font-scale));
+    --font-size-xl: calc(26px * var(--font-scale));
+    --font-size-2xl: calc(32px * var(--font-scale));
     --font-family: 'Satoshi-Variable', sans-serif;
 
     --accent-color: #22b561;
