--- a/src/lib/reset.css
+++ b/src/lib/reset.css
@@ -37,6 +37,11 @@ ol[role='list'] {
 body {
     min-height: 100vh;
     line-height: 1.5;
+    margin: 0;
+}
+
+html {
+    overscroll-behavior: none;
 }
 
 /* Set shorter line heights on headings and interactive elements */
