remove heading line height reset

--- a/src/lib/reset.css
+++ b/src/lib/reset.css
@@ -45,11 +45,7 @@ html {
     overscroll-behavior: none;
 }
 
-/* Set shorter line heights on headings and interactive elements */
-h1,
-h2,
-h3,
-h4,
+/* Set shorter line heights on interactive elements */
 button,
 input,
 label {
