encode title bar height and page padding as css vars

--- a/src/lib/styles.css
+++ b/src/lib/styles.css
@@ -43,6 +43,9 @@
 
     --accent-color: #22b561;
     --font-color-primary: #353535;
+
+    --title-bar-height: 38px;
+    --page-padding: 16px;
 }
 
 body {
